Add binary file support with hex dump viewer
- Detect binary files via null-byte scan and strict UTF-8 decode
- Display binary files as a classic hex dump (offset | hex | ASCII),
  capped at 512 KB with a truncation notice for larger files
- Binary tabs are read-only; save/saveAs/confirmDiscard are no-ops
- Open dialog now defaults to all files instead of text-only filter

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>